# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:requirements.bzl", "declare_requirements")
load(":defs.bzl", "REQUIREMENTS")

package(default_visibility = ["//visibility:public"])

declare_requirements(
    name = "runtime_requirements",
    requirements = REQUIREMENTS,
)
