# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//build_tools/bazel:cc_benchmark.bzl", "iree_cc_benchmark")
load("//build_tools/bazel:glob.bzl", "iree_checked_glob")
load(":cc_benchmark_rules_test.bzl", "cc_benchmark_rules_test_suite")
load(":cc_fuzz_rules_test.bzl", "cc_fuzz_rules_test_suite")
load(":cc_link_test.bzl", "cc_link_test_suite")
load(":cc_rules_test.bzl", "cc_rules_test_suite")
load(":executable_rules_test.bzl", "executable_rules_test_suite")
load(":generate_rules_test.bzl", "generate_rules_test_suite")
load(":glob_rules_test.bzl", "glob_rules_test_suite")
load(":query_rules_test.bzl", "query_rules_test_suite")

package(default_visibility = ["//visibility:public"])

iree_cc_benchmark(
    name = "cc_benchmark_smoke_test_fixture",
    srcs = ["cc_benchmark_smoke_test_fixture.c"],
)

test_suite(
    name = "cc_benchmark_smoke_tests",
    tests = [":cc_benchmark_smoke_test_fixture_test"],
)

cc_benchmark_rules_test_suite(name = "cc_benchmark_tests")

cc_fuzz_rules_test_suite(name = "cc_fuzz_tests")

cc_rules_test_suite(name = "cc_tests")

cc_link_test_suite(name = "cc_link_tests")

executable_rules_test_suite(name = "executable_tests")

sh_binary(
    name = "generate_rule_fixture_tool",
    srcs = ["generate_rule_fixture.sh"],
)

generate_rules_test_suite(name = "generate_tests")

filegroup(
    name = "checked_glob_fixture",
    srcs = iree_checked_glob(
        [
            "checked_glob_alpha.txt",
            "checked_glob_beta.txt",
        ],
        include = ["checked_glob_*.txt"],
    ),
)

glob_rules_test_suite(name = "glob_tests")

query_rules_test_suite(name = "query_tests")

test_suite(
    name = "wasm_tests",
    tests = ["//build_tools/wasm/test:wasm_tests"],
)
