# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/embed_data:build_defs.bzl", "iree_c_embed_data")
load("//build_tools/embed_data:embed_data_rules_test.bzl", "embed_data_rules_test_suite")

package(
    default_visibility = ["//build_tools/embed_data:__pkg__"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_c_embed_data(
    name = "flat_embed",
    testonly = True,
    srcs = [
        "crlf.bin",
        "first.txt",
        "nested/second.txt",
    ],
    c_file_output = "flat_embed.c",
    flatten = True,
    h_file_output = "flat_embed.h",
)

iree_c_embed_data(
    name = "path_embed",
    testonly = True,
    srcs = [
        "crlf.bin",
        "first.txt",
        "nested/second.txt",
    ],
    c_file_output = "path_embed.c",
    h_file_output = "path_embed.h",
    identifier = "path_embed",
    strip_prefix = "build_tools/embed_data/testdata/",
)

embed_data_rules_test_suite(name = "embed_data_tests")
